started setting up post /users/create controller

--- a/app/views/users/create.erb
+++ b/app/views/users/create.erb
@@ -1,6 +1,6 @@
 <h1> Create an account to start keeping track of information about your pets!</h1>
 
-<form action="/signup" method="POST">
+<form action="/users/create" method="POST">
 
   <p>
     <label for="username" id="username">Username:</label>
