created pets GET controllers, created links between pet pages

--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,1 +1,4 @@
 <h1>This page will let you create a new pet profile</h1>
+
+<p><a href="/">Back to the main page</a></p>
+<p><a href="/pets/index">See all of your pets!</a></p>
