--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -1,1 +1,4 @@
 <h1>This page will show you a selected pet profile</h1>
+
+<p><a href="/pets/index">See all of your pets!</a></p>
+<p><a href="/">Back to main page</a></p>
