--- a/app/views/pets/index.erb
+++ b/app/views/pets/index.erb
@@ -1,3 +1,4 @@
 <h1>This page will show you all your saved pets</h1>
 
+<p><a href="/pets/new">Create a profile for a new pet!</a></p>
 <p><a href="/">Back to the main page</a></p>
