--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,4 +1,58 @@
 <h1>This page will let you create a new pet profile</h1>
 
+<h1>Below, enter all of the information about your pet:</h1>
+  <form action="/pets" method="POST">
+
+      <p><label for="name">Name:</label>
+      <input type="text" id="name" name="name"></p>
+
+      <p><label for="species">Species:</label>
+      <input type="text" id="species" name="species"></p>
+
+      <p><label for="breed">Breed:</label>
+      <input type="text" id="breed" name="breed"></p>
+
+      <p><label for="microchip_number">Microchip Number:</label>
+      <input type="text" id="microchip_number" name="microchip_number"></p>
+
+      <p><label for="microchip_registry">Microchip Registry:</label>
+      <input type="text" id="microchip_registry" name="microchip_registry"></p>
+
+      <p><label for="vet_name">Vet Name:</label>
+      <input type="text" id="vet_name" name="vet_name"></p>
+
+      <p><label for="vet_phone">Vet Phone:</label>
+      <input type="text" id="vet_phone" name="vet_phone"></p>
+
+      <p><label for="vaccinations">Vaccinations:</label>
+      <input type="text" id="vaccinations" name="vaccinations"></p>
+
+      <p><label for="flea_treatment_type">Flea treatment type:</label>
+      <input type="text" id="flea_treatment_type" name="flea_treatment_type"></p>
+
+      <p><label for="heartworm_treatment_type">Heartworm treatment type:</label>
+      <input type="text" id="heartworm_treatment_type" name="heartworm_treatment_type"></p>
+
+      <p><label for="allergies">Allergies:</label>
+      <input type="text" id="allergies" name="allergies"></p>
+
+      <p><label for="food_brand">Food brand:</label>
+      <input type="text" id="food_brand" name="food_brand"></p>
+
+      <p><label for="food_serving">Food serving:</label>
+      <input type="text" id="food_serving" name="food_serving"></p>
+
+      <p><label for="feedings_per_day">Feedings per day:</label>
+      <input type="text" id="feedings_per_day" name="feedings_per_day"></p>
+
+      <p><label for="comments">Comments:</label>
+      <input type="text" id="comments" name="comments"></p>
+
+      <p><input type="submit"></p>
+  </form>
+
+
+
+
 <p><a href="/">Back to the main page</a></p>
 <p><a href="/pets/index">See all of your pets!</a></p>
