updated users/pets controllers

--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -2,4 +2,5 @@
 
 
 <p><a href="/pets/index">See all of your pets!</a></p>
+<p><a href="/pets/new">Create a New Pet!</a></p>
 <p><a href="/">Back to main page</a></p>
