--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -6,6 +6,7 @@
     <div class="content">
       <p>Welcome! This app will let you create and store information about your pet.</p>
       <p>Go ahead and <a href="/users/create">create an account</a> to get started!</p>
+      <p>If you already have an account, <a href="/login">log in.</a></p>
 
     </div>
   </div>
