changed welcome page formatting

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,13 +1,7 @@
 <div class="container">
-  <header><img src="images/corneal-small.png" class="img-responsive main-image"></header>
-  <div class="col-md-8 col-md-offset-2">
-    <h2>Sinatra Template Default Page</h2>
-
-    <div class="content">
-      <p>Welcome! This app will let you create and store information about your pet.</p>
-      <p>Go ahead and <a href="/users/create">create an account</a> to get started!</p>
-      <p>If you already have an account, <a href="/login">log in.</a></p>
-
-    </div>
+  <div class="content">
+    <p><h2>Welcome! This app will let you create and store information about your pet.</h2></p>
+    <p>Go ahead and <a href="/users/create">create an account</a> to get started!</p>
+    <p>If you already have an account, <a href="/login">log in.</a></p>
   </div>
 </div>
