--- a/app/views/pets/index.erb
+++ b/app/views/pets/index.erb
@@ -2,3 +2,4 @@
 
 <p><a href="/pets/new">Create a profile for a new pet!</a></p>
 <p><a href="/">Back to the main page</a></p>
+<p><a href="/logout">Logout</a></p>
