started adding to pets/show

--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -1,5 +1,9 @@
 <h1>This page will show you a selected pet profile</h1>
 
+<p>Name:<%=@pet.name%></p>
+<p>Species:<%=@pet.species%></p>
+
+
 
 <p><a href="/pets/index">See all of your pets!</a></p>
 <p><a href="/pets/new">Create a New Pet!</a></p>
