--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -1,7 +1,21 @@
 <h1>This page will show you a selected pet profile</h1>
 
-<p>Name:<%=@pet.name%></p>
-<p>Species:<%=@pet.species%></p>
+<p>Name: <%=@pet.name%></p>
+<p>Species: <%=@pet.species%></p>
+<p>Breed: <%=@pet.breed%></p>
+<p>Microchip Number: <%=@pet.microchip_number%></p>
+<p>Microchip Registry: <%=@pet.microchip_registry%></p>
+<p>Vet Name: <%=@pet.vet_name%></p>
+<p>Vet Phone: <%=@pet.vet_phone%></p>
+<p>Vaccinations: <%=@pet.vaccinations%></p>
+<p>Flea treatment type: <%=@pet.flea_treatment_type%></p>
+<p>Heartworm treatment type: <%=@pet.heartworm_treatment_type%></p>
+<p>Allergies: <%=@pet.allergies%></p>
+<p>Food brand: <%=@pet.food_brand%></p>
+<p>Food serving: <%=@pet.food_serving%></p>
+<p>Feedings per day: <%=@pet.feedings_per_day%></p>
+<p>Comments: <%=@pet.comments%></p>
+
 
 
 
