edits to show/edit/controller to work on getting edit submission working.

--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -18,7 +18,7 @@
 
 
 
-
+<p><a href="/pets/<%=@pet.id%>/edit">Edit the information for this pet!</a></p>
 <p><a href="/pets">See all of your pets!</a></p>
 <p><a href="/pets/new">Create a New Pet!</a></p>
 <p><a href="/">Back to main page</a></p>
