updated link in edit pets form to allow return to index

--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -54,4 +54,4 @@
 </form>
 
 <p><a href="/">Back to the main page</a></p>
-<p><a href="/pets/index">See all of your pets!</a></p>
+<p><a href="/pets">See all of your pets!</a></p>
