--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -19,6 +19,10 @@
 
 
 <p><a href="/pets/<%=@pet.id%>/edit">Edit the information for this pet!</a></p>
+<p><form class="" action="/pets/<%= @pet.id %>" method="post">
+  <input type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Delete this pet's profile">
+</form></p>
 <p><a href="/pets">See all of your pets!</a></p>
 <p><a href="/pets/new">Create a New Pet!</a></p>
 <p><a href="/">Back to main page</a></p>
