added requirement all fields be complete to sign up, corrected href to sign up on login page

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -12,5 +12,5 @@
 
 </form>
 
-	<p>Or <a href="/signup">Sign Up</a> if you don't have an account.</p>
+	<p>Or <a href="/users/create">Sign Up</a> if you don't have an account.</p>
   <p><a href="/">Back to the main page.</a></p>
