--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -9,46 +9,46 @@
     <input type="text" id="name" value="<%=@pet.name%>" name="name"></p>
 
     <p><label for="species">Species:</label>
-    <input type="text" id="species" name="species"></p>
+    <input type="text" id="species" value="<%=@pet.species%>" name="species"></p>
 
     <p><label for="breed">Breed:</label>
-    <input type="text" id="breed" name="breed"></p>
+    <input type="text" id="breed" value="<%=@pet.breed%>" name="breed"></p>
 
     <p><label for="microchip_number">Microchip Number:</label>
-    <input type="text" id="microchip_number" name="microchip_number"></p>
+    <input type="text" id="microchip_number" value="<%=@pet.microchip_number%>" name="microchip_number"></p>
 
     <p><label for="microchip_registry">Microchip Registry:</label>
-    <input type="text" id="microchip_registry" name="microchip_registry"></p>
+    <input type="text" id="microchip_registry" value="<%=@pet.microchip_registry%>" name="microchip_registry"></p>
 
     <p><label for="vet_name">Vet Name:</label>
-    <input type="text" id="vet_name" name="vet_name"></p>
+    <input type="text" id="vet_name" value="<%=@pet.vet_name%>" name="vet_name"></p>
 
     <p><label for="vet_phone">Vet Phone:</label>
-    <input type="text" id="vet_phone" name="vet_phone"></p>
+    <input type="text" id="vet_phone" value="<%=@pet.vet_phone%>" name="vet_phone"></p>
 
     <p><label for="vaccinations">Vaccinations:</label>
-    <input type="text" id="vaccinations" name="vaccinations"></p>
+    <input type="text" id="vaccinations" value="<%=@pet.vaccinations%>" name="vaccinations"></p>
 
     <p><label for="flea_treatment_type">Flea treatment type:</label>
-    <input type="text" id="flea_treatment_type" name="flea_treatment_type"></p>
+    <input type="text" id="flea_treatment_type" value="<%=@pet.flea_treatment_type%>" name="flea_treatment_type"></p>
 
     <p><label for="heartworm_treatment_type">Heartworm treatment type:</label>
-    <input type="text" id="heartworm_treatment_type" name="heartworm_treatment_type"></p>
+    <input type="text" id="heartworm_treatment_type" value="<%=@pet.heartworm_treatment_type%>" name="heartworm_treatment_type"></p>
 
     <p><label for="allergies">Allergies:</label>
-    <input type="text" id="allergies" name="allergies"></p>
+    <input type="text" id="allergies" value="<%=@pet.allergies%>" name="allergies"></p>
 
     <p><label for="food_brand">Food brand:</label>
-    <input type="text" id="food_brand" name="food_brand"></p>
+    <input type="text" id="food_brand" value="<%=@pet.food_brand%>" name="food_brand"></p>
 
     <p><label for="food_serving">Food serving:</label>
-    <input type="text" id="food_serving" name="food_serving"></p>
+    <input type="text" id="food_serving" value="<%=@pet.food_serving%>"  name="food_serving"></p>
 
     <p><label for="feedings_per_day">Feedings per day:</label>
-    <input type="text" id="feedings_per_day" name="feedings_per_day"></p>
+    <input type="text" id="feedings_per_day" value="<%=@pet.feedings_per_day%>" name="feedings_per_day"></p>
 
     <p><label for="comments">Comments:</label>
-    <input type="text" id="comments" name="comments"></p>
+    <input type="text" id="comments" value="<%=@pet.comments%>" name="comments"></p>
 
     <p><input type="submit" value="submit"></p>
 </form>
