--- a/app/views/users/create.erb
+++ b/app/views/users/create.erb
@@ -4,15 +4,15 @@
 
   <p>
     <label for="username" id="username">Username:</label>
-    <input type="text" id="username" name="username">
+    <input type="text" id="username" name="username" required>
   </p>
   <p>
     <label for="email" id="email">Email:</label>
-    <input type="text" id="email" name="email">
+    <input type="email" id="email" name="email" required>
   </p>
   <p>
     <label for="password" id="password">Password:</label>
-    <input type="password" id="password" name="password">
+    <input type="password" id="password" name="password" required>
   </p>
   <p>
     <input type="submit">
