Add photo to welcome page via inline css

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,3 +1,12 @@
+<style>
+  body {
+    background-image: url("https://images.unsplash.com/photo-1497993950456-cdb57afd1cf1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1600&q=80")
+    background-size: auto;
+    background-repeat: no-repeat;
+  }
+
+
+</style>
 <div class="container">
   <div class="content">
     <p><h2>Welcome! This app will let you create and store information about your pet.</h2></p>
