Update background photo, use background-size: cover to get it to display properly

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,16 +1,15 @@
 <style>
   body {
-    background-image: url("https://images.unsplash.com/photo-1497993950456-cdb57afd1cf1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1600&q=80")
-    background-size: auto;
+    background-image: url("https://images.unsplash.com/photo-1442291928580-fb5d0856a8f1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80");
+    background-size: cover;
     background-repeat: no-repeat;
   }
-
-
 </style>
+
 <div class="container">
   <div class="content">
     <p><h2>Welcome! This app will let you create and store information about your pet.</h2></p>
     <p>Go ahead and <a href="/users/create">create an account</a> to get started!</p>
-    <p>If you already have an account, <a href="/login">log in.</a></p>
+    <p>If you love pets, <a href="/login">log in.</a></p>
   </div>
 </div>
