--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -8,8 +8,10 @@
 
 <div class="container">
   <div class="content">
-    <p><h2>Welcome! This app will let you create and store information about your pet.</h2></p>
-    <p>Go ahead and <a href="/users/create">create an account</a> to get started!</p>
-    <p>If you love pets, <a href="/login">log in.</a></p>
+    <p><h2>Welcome to Pet Keeper</h2></p>
+    <p>Store your pet's important information in one place.</p>
+    <p>Keep them healthy, keep them safe.</p>
+    <p><a href="/users/create">Create an account</a></p>
+    <p><a href="/login">Log in</a></p>
   </div>
 </div>
