--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -8,7 +8,7 @@
 
 <div class="container">
   <div class="content">
-    <p><h2>Welcome to Pet Keeper</h2></p>
+    <h2>Welcome to Pet Keeper</h2>
     <p>Store your pet's important information in one place.</p>
     <p>Keep them healthy, keep them safe.</p>
     <p><a href="/users/create">Create an account</a></p>
