--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -4,6 +4,14 @@
     background-size: cover;
     background-repeat: no-repeat;
   }
+
+  .container {
+    font-family: 'Poppins', sans-serif;
+    font-size: 5vh;
+    width: 400px;
+    margin-top: 20vh;
+    margin-left: 20vw;
+  }
 </style>
 
 <div class="container">
