--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -2,16 +2,21 @@
   body {
     background-image: url("https://images.unsplash.com/photo-1442291928580-fb5d0856a8f1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80");
     background-size: cover;
+    background-color: rgb(234,235,239);
     background-repeat: no-repeat;
   }
 
   .container {
-    font-family: 'Poppins', sans-serif;
-    font-size: 5vh;
-    width: 400px;
-    margin-top: 20vh;
-    margin-left: 20vw;
+    width: 500px;
+    margin-top: 15vh;
+    margin-left: 10vw;
   }
+
+  .content {
+    font-family: 'Poppins', sans-serif;
+    font-size: 4vh;
+  }
+
 </style>
 
 <div class="container">
