--- a/app/views/users/create.erb
+++ b/app/views/users/create.erb
@@ -1,3 +1,11 @@
+<style>
+  body {
+    background-image: url("https://images.unsplash.com/photo-1567505647004-3718cc3d5ca1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80");
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+</style>
+
 <h1> Create an account to start keeping track of information about your pets!</h1>
 
 <form action="/users" method="POST">
