--- a/app/views/users/create.erb
+++ b/app/views/users/create.erb
@@ -4,26 +4,33 @@
     background-size: cover;
     background-repeat: no-repeat;
   }
+
+  .form {
+    font-family: 'Poppins', sans-serif;
+  }
+  
 </style>
 
-<h1> Create an account to start keeping track of information about your pets!</h1>
-
-<form action="/users" method="POST">
-
-  <p>
-    <label for="username" id="username">Username:</label>
-    <input type="text" id="username" name="username" required>
-  </p>
-  <p>
-    <label for="email" id="email">Email:</label>
-    <input type="email" id="email" name="email" required>
-  </p>
-  <p>
-    <label for="password" id="password">Password:</label>
-    <input type="password" id="password" name="password" required>
-  </p>
-  <p>
-    <input type="submit">
-  </p>
-
-</form>
+<div id="title and subtitle">
+  <h1 id="title"> Create an account!</h1>
+  <p id="subtitle">Start keeping your pet's info in one place</p>
+</div>
+<div id="form container">
+  <form action="/users" method="POST">
+    <p>
+      <label for="username" id="username">Username:</label>
+      <input type="text" id="username" name="username" required>
+    </p>
+    <p>
+      <label for="email" id="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+    </p>
+    <p>
+      <label for="password" id="password">Password:</label>
+      <input type="password" id="password" name="password" required>
+    </p>
+    <p>
+      <input type="submit">
+    </p>
+  </form>
+</div>
