Change id names

--- a/app/views/users/create.erb
+++ b/app/views/users/create.erb
@@ -15,8 +15,8 @@
   <h1 id="title"> Create an account!</h1>
   <p id="subtitle">Start keeping your pet's info in one place</p>
 </div>
-<div id="form container">
-  <form action="/users" method="POST">
+<div id="container">
+  <form id="new-user-form" action="/users" method="POST">
     <p>
       <label for="username" id="username">Username:</label>
       <input type="text" id="username" name="username" required>
