--- a/app/views/users/create.erb
+++ b/app/views/users/create.erb
@@ -17,20 +17,22 @@
 </div>
 <div id="container">
   <form id="new-user-form" action="/users" method="POST">
-    <p>
-      <label for="username" id="username">Username:</label>
-      <input type="text" id="username" name="username" required>
-    </p>
-    <p>
-      <label for="email" id="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-    </p>
-    <p>
-      <label for="password" id="password">Password:</label>
-      <input type="password" id="password" name="password" required>
-    </p>
-    <p>
-      <input type="submit">
-    </p>
+    <div id="form-container">
+      <p>
+        <label for="username" id="username">Username:</label>
+        <input type="text" id="username" name="username" required>
+      </p>
+      <p>
+        <label for="email" id="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+      </p>
+      <p>
+        <label for="password" id="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+      </p>
+      <p>
+        <input type="submit">
+      </p>
+    </div>
   </form>
 </div>
