--- a/app/views/users/create.erb
+++ b/app/views/users/create.erb
@@ -1,17 +1,27 @@
-<style>
-  body {
-    background-color: #eaebef;
-  }
+<head>
+  <style>
+    body {
+      background-color: #eaebef;
 
-  #new-user-form {
-    background-image: url("https://images.unsplash.com/photo-1567505647004-3718cc3d5ca1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80");
-  }
+    }
 
-  .form {
-    font-family: 'Poppins', sans-serif;
-  }
-  
-</style>
+    #title {
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+      font-family: 'Cutive', serif;
+    }
+
+    #new-user-form {
+      background-image: url("https://images.unsplash.com/photo-1567505647004-3718cc3d5ca1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80");
+    }
+
+    .form {
+      font-family: 'Poppins', sans-serif;
+    }
+    
+  </style>
+</head>
 
 <div id="title and subtitle">
   <h1 id="title"> Create an account!</h1>
