--- a/app/views/users/create.erb
+++ b/app/views/users/create.erb
@@ -1,4 +1,6 @@
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cutive&display=swap" rel="stylesheet">
   <style>
     body {
       background-color: #eaebef;
