Add css for #container

--- a/app/views/users/create.erb
+++ b/app/views/users/create.erb
@@ -6,16 +6,27 @@
       background-color: #eaebef;
 
     }
-
-    #title {
+    #title, #subtitle {
       margin-left: auto;
       margin-right: auto;
       text-align: center;
       font-family: 'Cutive', serif;
     }
-
     #new-user-form {
+      height: 600px;
+      max-width: 580px;
+      padding: 20px;
+      font-family: 'Poppins', sans-serif;
       background-image: url("https://images.unsplash.com/photo-1567505647004-3718cc3d5ca1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80");
+      background-repeat: no-repeat;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    #container {
+      max-width: 580px;
+      max-height: 600px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .form {
