--- a/app/views/users/create.erb
+++ b/app/views/users/create.erb
@@ -43,15 +43,15 @@
 <div id="container">
   <form id="new-user-form" action="/users" method="POST">
     <div id="form-container">
-      <label for="username" id="username">Username:</label>
+      <label for="username" id="username">*Username:</label>
       <input type="text" id="username" name="username" class="input-field" placeholder="dogmom123" required>
       <br/>
       <br/>
-      <label for="email" id="email">Email:</label>
+      <label for="email" id="email">*Email:</label>
       <input type="email" id="email" name="email" required>
       <br/>
       <br/>
-      <label for="password" id="password">Password:</label>
+      <label for="password" id="password">*Password:</label>
       <input type="password" id="password" name="password" required>
       <br/>
       <br>
