--- a/app/views/users/create.erb
+++ b/app/views/users/create.erb
@@ -48,7 +48,7 @@
       <br/>
       <br/>
       <label for="email" id="email">*Email:</label>
-      <input type="email" id="email" name="email" required>
+      <input type="email" id="email" name="email" class="input-field" placeholder="youraddress@email.com" required>
       <br/>
       <br/>
       <label for="password" id="password">*Password:</label>
