Add class and placeholder to password input field

--- a/app/views/users/create.erb
+++ b/app/views/users/create.erb
@@ -52,7 +52,7 @@
       <br/>
       <br/>
       <label for="password" id="password">*Password:</label>
-      <input type="password" id="password" name="password" required>
+      <input type="password" id="password" name="password" class="input-field" placeholder="g00dD0g" required>
       <br/>
       <br>
       <input type="submit">
