--- a/app/views/users/create.erb
+++ b/app/views/users/create.erb
@@ -28,11 +28,11 @@
       margin-left: auto;
       margin-right: auto;
     }
-
-    .form {
-      font-family: 'Poppins', sans-serif;
+    .input-field {
+      width: 100%;
+      opacity: .7;
     }
-    
+
   </style>
 </head>
 
