--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -8,7 +8,7 @@
 
   .container {
     width: 500px;
-    margin-top: 15vh;
+    margin-top: 17vh;
     margin-left: 10vw;
   }
 
@@ -24,7 +24,7 @@
     <h1>Welcome to Pet Keeper</h1>
     <p>Store your pet's important information in one place.</p>
     <p>Keep them healthy, keep them safe.</p>
-    <p><a href="/users/create">Create an account</a></p>
-    <p><a href="/login">Log in</a></p>
+    <p><button href="/users/create">Create an account</button></p>
+    <p><button href="/login">Log in</button></p>
   </div>
 </div>
