Update padding for content

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -15,6 +15,18 @@
   .content {
     font-family: 'Poppins', sans-serif;
     font-size: 4vh;
+    padding-right: 50px;
+  }
+
+  .button {
+    background-color: #f5ccff;
+    border: none;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
   }
 
 </style>
@@ -24,7 +36,7 @@
     <h1>Welcome to Pet Keeper</h1>
     <p>Store your pet's important information in one place.</p>
     <p>Keep them healthy, keep them safe.</p>
-    <p><button href="/users/create">Create an account</button></p>
-    <p><button href="/login">Log in</button></p>
+    <button href="/users/create" class="button">Create an account</button>
+    <button href="/login" class="button">Log in</button>
   </div>
 </div>
