Update buttons for functionality

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -36,7 +36,7 @@
     <h1>Welcome to Pet Keeper</h1>
     <p>Store your pet's important information in one place.</p>
     <p>Keep them healthy, keep them safe.</p>
-    <button href="/users/create" class="button">Create an account</button>
-    <button href="/login" class="button">Log in</button>
+    <a href="/users/create" class="button">Create an account</a>
+    <a href="/login" class="button">Log in</a>
   </div>
 </div>
