--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,36 +1,37 @@
-<style>
-  body {
-    background-image: url("https://images.unsplash.com/photo-1442291928580-fb5d0856a8f1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80");
-    background-size: cover;
-    background-color: rgb(234,235,239);
-    background-repeat: no-repeat;
-  }
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-image: url("https://images.unsplash.com/photo-1442291928580-fb5d0856a8f1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80");
+      background-size: cover;
+      background-color: rgb(234,235,239);
+      background-repeat: no-repeat;
+    }
 
-  .container {
-    width: 500px;
-    margin-top: 17vh;
-    margin-left: 10vw;
-  }
+    .container {
+      width: 500px;
+      margin-top: 17vh;
+      margin-left: 10vw;
+    }
 
-  .content {
-    font-family: 'Poppins', sans-serif;
-    font-size: 4vh;
-    padding-right: 50px;
-  }
+    .content {
+      font-family: 'Poppins', sans-serif;
+      font-size: 4vh;
+      padding-right: 50px;
+    }
 
-  .button {
-    background-color: #f5ccff;
-    border: none;
-    color: black;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-  }
-
-</style>
-
+    .button {
+      background-color: #f5ccff;
+      border: none;
+      color: black;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+    }
+  </style>
+</head>
 <div class="container">
   <div class="content">
     <h1>Welcome to Pet Keeper</h1>
