--- a/app/views/users/create.erb
+++ b/app/views/users/create.erb
@@ -1,6 +1,5 @@
 <head>
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Cutive&display=swap" rel="stylesheet">
   <style>
     body {
       background-color: #eaebef;
@@ -10,7 +9,7 @@
       margin-left: auto;
       margin-right: auto;
       text-align: center;
-      font-family: 'Cutive', serif;
+      font-family: 'Poppins', sans-serif;
     }
     #new-user-form {
       height: 600px;
