--- a/app/views/users/create.erb
+++ b/app/views/users/create.erb
@@ -32,6 +32,17 @@
       opacity: .7;
     }
 
+    .button {
+      background-color: #f5ccff;
+      border: none;
+      color: black;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+    }
+
   </style>
 </head>
 
@@ -54,7 +65,7 @@
       <input type="password" id="password" name="password" class="input-field" placeholder="g00dD0g" required>
       <br/>
       <br>
-      <input type="submit">
+      <input class="button" type="submit">
     </div>
   </form>
 </div>
