--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,3 +1,14 @@
+<head>
+  <style>
+    body {
+      background-color: #eaebef;
+    }
+  </style>
+</head>
+
+
+
+
 <h1>Log in to view your pet diary!</h1>
 
 <form action="/login" method = "POST">
