--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,6 +2,9 @@
   <style>
     body {
       background-color: #eaebef;
+      background-image: url("https://images.unsplash.com/photo-1523626797181-8c5ae80d40c2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80");
+      background-size: cover;
+      background-repeat: no-repeat;
     }
   </style>
 </head>
