Add title id to h1

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -11,8 +11,7 @@
 
 
 
-
-<h1>Log in to view your pet diary!</h1>
+<h1 id="title">Log in to view your pet diary!</h1>
 
 <form action="/login" method = "POST">
 
