Add html structure to form

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -13,17 +13,20 @@
 
 <h1 id="title">Log in to view your pet diary!</h1>
 
-<form action="/login" method = "POST">
-
-  <label for="username" id="username">Username:</label>
-  <input type="text" id="username" name="username">
-
-  <label for="password">Password:</label>
-  <input type="password" id="password" name="password">
-
-  <input type="submit">
-
-</form>
-
+<div id="container">
+  <form id="login-form" action="/login" method = "POST">
+    <div id="form-container">
+      <label for="username" id="username">Username:</label>
+      <input type="text" id="username" name="username">
+      <br/>
+      <br/>
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password">
+      <br/>
+      <br/>
+      <input class="button" type="submit">
+    </div>
+  </form>
+</div>
 	<p>Or <a href="/users/create">Sign Up</a> if you don't have an account.</p>
   <p><a href="/">Back to the main page.</a></p>
