--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,5 @@
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
   <style>
     body {
       background-color: #eaebef;
@@ -6,6 +7,30 @@
       background-size: cover;
       background-repeat: no-repeat;
     }
+
+    .container {
+      width: 500px;
+      margin-top: 17vh;
+      margin-left: 10vw;
+    }
+
+    .form-container {
+      font-family: 'Poppins', sans-serif;
+      font-size: 4vh;
+      padding-right: 50px;
+    }
+
+    .button {
+      background-color: #f5ccff;
+      border: none;
+      color: black;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+    }
+
   </style>
 </head>
 
@@ -20,7 +45,7 @@
       <input type="text" id="username" name="username">
       <br/>
       <br/>
-      <label for="password">Password:</label>
+      <label for="password" id="password">Password:</label>
       <input type="password" id="password" name="password">
       <br/>
       <br/>
