--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,3 +1,9 @@
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+  <style>
+  </style>
+</head>
+
 <h1>This page will let you create a new pet profile</h1>
 
 <h1>Below, enter all of the information about your pet:</h1>
