--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,6 +1,9 @@
 <head>
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
   <style>
+    body {
+      background-color: #eaebef;
+    }
   </style>
 </head>
 
