Update title/subtitle and heading tags

--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -8,9 +8,8 @@
   </style>
 </head>
 
-<h1>This page will let you create a new pet profile</h1>
-
-<h1>Below, enter all of the information about your pet:</h1>
+<h1>Create a profile for your best friend!</h1>
+<h2>Enter all of their information below:</h2>
   <form action="/pets" method="POST">
 
       <p><label for="name">Name:</label>
