Add grid container tag

--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -10,6 +10,8 @@
 
 <h1>Create a profile for your best friend!</h1>
 <h2>Enter all of their information below:</h2>
+
+<div class="container">
   <form action="/pets" method="POST">
 
       <p><label for="name">Name:</label>
@@ -59,7 +61,7 @@
 
       <p><input type="submit"></p>
   </form>
-
+</div>
 
 
 
