Add label and field classes and remove all p tags

--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -14,52 +14,52 @@
 <div class="container">
   <form action="/pets" method="POST">
 
-      <p><label for="name">Name:</label>
-      <input type="text" id="name" name="name"></p>
+      <label class="label" for="name">Name:</label>
+      <input class="field" type="text" id="name" name="name">
 
-      <p><label for="species">Species:</label>
-      <input type="text" id="species" name="species"></p>
+      <label class="label" for="species">Species:</label>
+      <input class="field" type="text" id="species" name="species">
 
-      <p><label for="breed">Breed:</label>
-      <input type="text" id="breed" name="breed"></p>
+      <label class="label" for="breed">Breed:</label>
+      <input class="field" type="text" id="breed" name="breed">
 
-      <p><label for="microchip_number">Microchip Number:</label>
-      <input type="text" id="microchip_number" name="microchip_number"></p>
+      <label class="label" for="microchip_number">Microchip Number:</label>
+      <input class="field" type="text" id="microchip_number" name="microchip_number">
 
-      <p><label for="microchip_registry">Microchip Registry:</label>
-      <input type="text" id="microchip_registry" name="microchip_registry"></p>
+      <label class="label" for="microchip_registry">Microchip Registry:</label>
+      <input class="field" type="text" id="microchip_registry" name="microchip_registry">
 
-      <p><label for="vet_name">Vet Name:</label>
-      <input type="text" id="vet_name" name="vet_name"></p>
+      <label class="label" for="vet_name">Vet Name:</label>
+      <input class="field" type="text" id="vet_name" name="vet_name">
 
-      <p><label for="vet_phone">Vet Phone:</label>
-      <input type="text" id="vet_phone" name="vet_phone"></p>
+      <label class="label" for="vet_phone">Vet Phone:</label>
+      <input class="field" type="text" id="vet_phone" name="vet_phone">
 
-      <p><label for="vaccinations">Vaccinations:</label>
-      <input type="text" id="vaccinations" name="vaccinations"></p>
+      <label class="label" for="vaccinations">Vaccinations:</label>
+      <input class="field" type="text" id="vaccinations" name="vaccinations">
 
-      <p><label for="flea_treatment_type">Flea treatment type:</label>
-      <input type="text" id="flea_treatment_type" name="flea_treatment_type"></p>
+      <label class="label" for="flea_treatment_type">Flea treatment type:</label>
+      <input class="field" type="text" id="flea_treatment_type" name="flea_treatment_type">
 
-      <p><label for="heartworm_treatment_type">Heartworm treatment type:</label>
-      <input type="text" id="heartworm_treatment_type" name="heartworm_treatment_type"></p>
+      <label class="label" for="heartworm_treatment_type">Heartworm treatment type:</label>
+      <input class="field" type="text" id="heartworm_treatment_type" name="heartworm_treatment_type">
 
-      <p><label for="allergies">Allergies:</label>
-      <input type="text" id="allergies" name="allergies"></p>
+      <label class="label" for="allergies">Allergies:</label>
+      <input class="field" type="text" id="allergies" name="allergies">
 
-      <p><label for="food_brand">Food brand:</label>
-      <input type="text" id="food_brand" name="food_brand"></p>
+      <label class="label" for="food_brand">Food brand:</label>
+      <input class="field" type="text" id="food_brand" name="food_brand">
 
-      <p><label for="food_serving">Food serving:</label>
-      <input type="text" id="food_serving" name="food_serving"></p>
+      <label class="label" for="food_serving">Food serving:</label>
+      <input class="field" type="text" id="food_serving" name="food_serving">
 
-      <p><label for="feedings_per_day">Feedings per day:</label>
-      <input type="text" id="feedings_per_day" name="feedings_per_day"></p>
+      <label class="label" for="feedings_per_day">Feedings per day:</label>
+      <input class="field" type="text" id="feedings_per_day" name="feedings_per_day">
 
-      <p><label for="comments">Comments:</label>
-      <input type="text" id="comments" name="comments"></p>
+      <label class="label" for="comments">Comments:</label>
+      <input class="field" type="text" id="comments" name="comments">
 
-      <p><input type="submit"></p>
+      <input type="submit">
   </form>
 </div>
 
