Specified container is grid

--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -5,6 +5,11 @@
       background-color: #eaebef;
       font-family: 'Poppins', sans-serif;
     }
+
+    .container {
+      display: grid; 
+    }
+
   </style>
 </head>
 
