--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -17,54 +17,56 @@
   </style>
 </head>
 
-<h1>Create a profile for your best friend!</h1>
-<h2>Enter all of their information below:</h2>
+<div class="title">
+  <h1>Create a profile for your best friend!</h1>
+  <h2>Enter all of their information below:</h2>
+</div>
 
 <div class="container">
   <form action="/pets" method="POST">
 
       <label class="label" for="name">Name:</label>
       <input class="field" type="text" id="name" name="name">
-
+      <br/>
       <label class="label" for="species">Species:</label>
       <input class="field" type="text" id="species" name="species">
-
+      <br/>
       <label class="label" for="breed">Breed:</label>
       <input class="field" type="text" id="breed" name="breed">
-
+      <br/>
       <label class="label" for="microchip_number">Microchip Number:</label>
       <input class="field" type="text" id="microchip_number" name="microchip_number">
-
+      <br/>
       <label class="label" for="microchip_registry">Microchip Registry:</label>
       <input class="field" type="text" id="microchip_registry" name="microchip_registry">
-
+      <br/>
       <label class="label" for="vet_name">Vet Name:</label>
       <input class="field" type="text" id="vet_name" name="vet_name">
-
+      <br/>
       <label class="label" for="vet_phone">Vet Phone:</label>
       <input class="field" type="text" id="vet_phone" name="vet_phone">
-
+      <br/>
       <label class="label" for="vaccinations">Vaccinations:</label>
       <input class="field" type="text" id="vaccinations" name="vaccinations">
-
+      <br/>
       <label class="label" for="flea_treatment_type">Flea treatment type:</label>
       <input class="field" type="text" id="flea_treatment_type" name="flea_treatment_type">
-
+      <br/>
       <label class="label" for="heartworm_treatment_type">Heartworm treatment type:</label>
       <input class="field" type="text" id="heartworm_treatment_type" name="heartworm_treatment_type">
-
+      <br/>
       <label class="label" for="allergies">Allergies:</label>
       <input class="field" type="text" id="allergies" name="allergies">
-
+      <br/>
       <label class="label" for="food_brand">Food brand:</label>
       <input class="field" type="text" id="food_brand" name="food_brand">
-
+      <br/>
       <label class="label" for="food_serving">Food serving:</label>
       <input class="field" type="text" id="food_serving" name="food_serving">
-
+      <br/>
       <label class="label" for="feedings_per_day">Feedings per day:</label>
       <input class="field" type="text" id="feedings_per_day" name="feedings_per_day">
-
+      <br/>
       <label class="label" for="comments">Comments:</label>
       <input class="field" type="text" id="comments" name="comments">
 
