--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -6,6 +6,12 @@
       font-family: 'Poppins', sans-serif;
     }
 
+  .title {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+
   </style>
 </head>
 
