--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -4,6 +4,9 @@
     body {
       background-color: #eaebef;
       font-family: 'Poppins', sans-serif;
+      /*background-image: url("https://images.unsplash.com/photo-1562119463-f5ac38fc8c47?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80");
+      background-repeat: no-repeat;
+      background-size: cover;*/
     }
 
     .title {
