Center form container

--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -15,6 +15,13 @@
       text-align: center;
     }
 
+    .container {
+      max-width: 580px;
+      max-height: 600px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
   </style>
 </head>
 
