Update field width move links within form container

--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -22,6 +22,9 @@
       margin-right: auto;
     }
 
+    .field {
+      width: 100%;
+    }
   </style>
 </head>
 
@@ -108,10 +111,16 @@
       <input class="field" type="text" id="comments" name="comments">
 
       <input type="submit">
+      <br/>
+      <br/>
   </form>
+  <a href="/">Back to the main page</a>
+  <br/>
+  <a href="/pets/index">See all of your pets!</a>
+  <br/>
+  <br/>
 </div>
 
 
 
-<p><a href="/">Back to the main page</a></p>
-<p><a href="/pets/index">See all of your pets!</a></p>
+
