--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -25,6 +25,18 @@
     .field {
       width: 100%;
     }
+
+    .button {
+      background-color: #f5ccff;
+      border: none;
+      color: black;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+    }
+
   </style>
 </head>
 
@@ -35,6 +47,7 @@
 
 <div class="container">
   <form action="/pets" method="POST">
+
 
       <label class="label" for="name">Name:</label>
       <br/>
@@ -114,9 +127,7 @@
       <br/>
       <br/>
   </form>
-  <a href="/">Back to the main page</a>
-  <br/>
-  <a href="/pets/index">See all of your pets!</a>
+  <a class="button" href="/">Back to the main page</a> <a class="button" href="/pets/index">See all of your pets!</a>
   <br/>
   <br/>
 </div>
