--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -48,7 +48,7 @@
 <div class="container">
   <form action="/pets" method="POST">
 
-
+      <h3>Basic Information</h3>
       <label class="label" for="name">Name:</label>
       <br/>
       <input class="field" type="text" id="name" name="name">
@@ -74,6 +74,7 @@
       <input class="field" type="text" id="microchip_registry" name="microchip_registry">
       <br/>
       <br/>
+      <h3>Health Information</h3>
       <label class="label" for="vet_name">Vet Name:</label>
       <br/>
       <input class="field" type="text" id="vet_name" name="vet_name">
@@ -104,6 +105,7 @@
       <input class="field" type="text" id="allergies" name="allergies">
       <br/>
       <br/>
+      <h3>Feeding Information</h3>
       <label class="label" for="food_brand">Food brand:</label>
       <br/>
       <input class="field" type="text" id="food_brand" name="food_brand">
