Add and style container for health info, update background color for basic info container

--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -38,7 +38,12 @@
     }
 
     #basic-info-container {
-      background-color: #ffb0fe;
+      background-color: #ddc4ff;
+      padding: 20px;
+    }
+
+    #health-info-container {
+      background-color: #c4fffe;
       padding: 20px;
     }
 
@@ -80,37 +85,39 @@
         <br/>
         <br/>
       </div>
-      <h3>Health Information</h3>
-      <label class="label" for="vet_name">Vet Name:</label>
-      <br/>
-      <input class="field" type="text" id="vet_name" name="vet_name">
-      <br/>
-      <br/>
-      <label class="label" for="vet_phone">Vet Phone:</label>
-      <br/>
-      <input class="field" type="text" id="vet_phone" name="vet_phone">
-      <br/>
-      <br/>
-      <label class="label" for="vaccinations">Vaccinations:</label>
-      <br/>
-      <input class="field" type="text" id="vaccinations" name="vaccinations">
-      <br/>
-      <br/>
-      <label class="label" for="flea_treatment_type">Flea treatment type:</label>
-      <br/>
-      <input class="field" type="text" id="flea_treatment_type" name="flea_treatment_type">
-      <br/>
-      <br/>
-      <label class="label" for="heartworm_treatment_type">Heartworm treatment type:</label>
-      <br/>
-      <input class="field" type="text" id="heartworm_treatment_type" name="heartworm_treatment_type">
-      <br/>
-      <br/>
-      <label class="label" for="allergies">Allergies:</label>
-      <br/>
-      <input class="field" type="text" id="allergies" name="allergies">
-      <br/>
-      <br/>
+      <div id="health-info-container">
+        <h3>Health Information</h3>
+        <label class="label" for="vet_name">Vet Name:</label>
+        <br/>
+        <input class="field" type="text" id="vet_name" name="vet_name">
+        <br/>
+        <br/>
+        <label class="label" for="vet_phone">Vet Phone:</label>
+        <br/>
+        <input class="field" type="text" id="vet_phone" name="vet_phone">
+        <br/>
+        <br/>
+        <label class="label" for="vaccinations">Vaccinations:</label>
+        <br/>
+        <input class="field" type="text" id="vaccinations" name="vaccinations">
+        <br/>
+        <br/>
+        <label class="label" for="flea_treatment_type">Flea treatment type:</label>
+        <br/>
+        <input class="field" type="text" id="flea_treatment_type" name="flea_treatment_type">
+        <br/>
+        <br/>
+        <label class="label" for="heartworm_treatment_type">Heartworm treatment type:</label>
+        <br/>
+        <input class="field" type="text" id="heartworm_treatment_type" name="heartworm_treatment_type">
+        <br/>
+        <br/>
+        <label class="label" for="allergies">Allergies:</label>
+        <br/>
+        <input class="field" type="text" id="allergies" name="allergies">
+        <br/>
+        <br/>
+      </div>
       <h3>Feeding Information</h3>
       <label class="label" for="food_brand">Food brand:</label>
       <br/>
