Update submit button position

--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -150,7 +150,7 @@
         <br/>
         <br/>
       </div>
-      <br/>
+      <p><input class="button" type="submit"></p>
   </form>
   <a class="button" href="/">Back to the main page</a> <a class="button" href="/pets/index">See all of your pets!</a>
   <br/>
