Change the main page to your main page

--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -152,7 +152,7 @@
       </div>
       <p><input class="button" type="submit"></p>
   </form>
-  <a class="button" href="/">Back to the main page</a> 
+  <a class="button" href="/">Back to your main page</a> 
   <br/>
   <br/>
 </div>
