--- a/app/views/pets/index.erb
+++ b/app/views/pets/index.erb
@@ -1,3 +1,14 @@
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-color: #eaebef;
+      font-family: 'Poppins', sans-serif;
+    }
+  </style>
+</head>
+
+
 <h1>This page will show you all your saved pets</h1>
 
 <% @pets.each do |pet| %>
