Update link/button styling

--- a/app/views/pets/index.erb
+++ b/app/views/pets/index.erb
@@ -5,6 +5,17 @@
       background-color: #eaebef;
       font-family: 'Poppins', sans-serif;
     }
+
+    .button {
+      background-color: #f5ccff;
+      border: none;
+      color: black;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+    }   
   </style>
 </head>
 
@@ -17,5 +28,5 @@
 <p><%end%>
 </br>
 
-<p><a href="/pets/new">Create a profile for a new pet!</a></p>
-<p><a href="/logout">Logout</a></p>
+<p><a class="button" href="/pets/new">Create a profile for a new pet!</a></p>
+<p><a class="button" href="/logout">Logout</a></p>
