Move buttons to same line

--- a/app/views/pets/index.erb
+++ b/app/views/pets/index.erb
@@ -28,5 +28,5 @@
 <p><%end%>
 </br>
 
-<p><a class="button" href="/pets/new">Create a profile for a new pet!</a></p>
-<p><a class="button" href="/logout">Logout</a></p>
+<a class="button" href="/pets/new">Create a profile for a new pet!</a>
+<a class="button" href="/logout">Logout</a>
