--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -1,3 +1,13 @@
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-color: #eaebef;
+      font-family: 'Poppins', sans-serif;
+    }
+  </style>
+</head>
+
 <h1>This page will show you a selected pet profile</h1>
 
 <p>Name: <%=@pet.name%></p>
