--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -5,6 +5,18 @@
       background-color: #eaebef;
       font-family: 'Poppins', sans-serif;
     }
+
+    .button {
+      background-color: #f5ccff;
+      border: none;
+      color: black;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+    }   
+
   </style>
 </head>
 
@@ -31,8 +43,8 @@
 <p><a href="/pets/<%=@pet.id%>/edit">Edit the information for this pet!</a></p>
 <p><form class="" action="/pets/<%= @pet.id %>" method="post">
   <input type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="Delete this pet's profile">
+  <input class="button" type="submit" value="Delete this pet's profile">
 </form></p>
-<p><a href="/pets">See all of your pets!</a></p>
-<p><a href="/pets/new">Create a New Pet!</a></p>
-<p><a href="/">Back to main page</a></p>
+<p><a class="button" href="/pets">See all of your pets!</a></p>
+<p><a class="button" href="/pets/new">Create a New Pet!</a></p>
+<p><a class="button" href="/">Back to main page</a></p>
