Insert pet name in title

--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -20,7 +20,7 @@
   </style>
 </head>
 
-<h1>This page will show you a selected pet profile</h1>
+<h1>This is <%=@pet.name%>'s profile!</h1>
 
 <p>Name: <%=@pet.name%></p>
 <p>Species: <%=@pet.species%></p>
