--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -17,10 +17,18 @@
       font-size: 16px;
     }   
 
+    .title {
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+    }
+
   </style>
 </head>
 
-<h1>This is <%=@pet.name%>'s profile!</h1>
+<div class="title">
+  <h1>This is <%=@pet.name%>'s profile!</h1>
+</div>
 
 <p>Name: <%=@pet.name%></p>
 <p>Species: <%=@pet.species%></p>
