Change container classes to ids

--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -38,7 +38,7 @@
 </div>
 
 <div class="container">
-  <div class="basic-info-container">
+  <div id="basic-info-container">
     <h3>Basic Information</h3>
     <p>Name: <%=@pet.name%></p>
     <p>Species: <%=@pet.species%></p>
@@ -46,7 +46,7 @@
     <p>Microchip Number: <%=@pet.microchip_number%></p>
     <p>Microchip Registry: <%=@pet.microchip_registry%></p>
   </div>
-  <div class="health-info-container">
+  <div id="health-info-container">
     <h3>Health Information</h3>
     <p>Vet Name: <%=@pet.vet_name%></p>
     <p>Vet Phone: <%=@pet.vet_phone%></p>
@@ -55,7 +55,7 @@
     <p>Heartworm treatment type: <%=@pet.heartworm_treatment_type%></p>
     <p>Allergies: <%=@pet.allergies%></p>
   </div>
-  <div class="feeding-info-container">
+  <div id="feeding-info-container">
     <h3>Feeding Information</h3>
     <p>Food brand: <%=@pet.food_brand%></p>
     <p>Food serving: <%=@pet.food_serving%></p>
