Update width of buttons

--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -15,7 +15,12 @@
       text-decoration: none;
       display: inline-block;
       font-size: 16px;
+      width: 100%;
     }   
+
+    #delete-button {
+      width: 111%;
+    }
 
     .title {
       margin-left: auto;
@@ -89,7 +94,7 @@
   <p><a class="button" href="/pets/<%=@pet.id%>/edit">Edit <%=@pet.name%>'s info</a></p>
   <p><form class="" action="/pets/<%= @pet.id %>" method="post">
     <input type="hidden" name="_method" value="DELETE">
-    <input class="button" type="submit" value="Delete <%=@pet.name%>'s profile">
+    <input class="button" id="delete-button" type="submit" value="Delete <%=@pet.name%>'s profile">
   </form></p>
   <p><a class="button" href="/pets">See all of your pets!</a></p>
   <p><a class="button" href="/pets/new">Create a profile for a new pet!</a></p>
