--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -43,6 +43,10 @@
       width: 100%;
     }
 
+    #basic-info-background {
+      background-color: rgba(255, 255, 255, 0.62)
+    }
+
     #health-info-container {
       /*background-color: #c4fffe;*/
       background-image: url("https://images.unsplash.com/photo-1551730458-be400bef0161?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
@@ -51,12 +55,20 @@
       width: 100%;
     }
 
+    #health-info-background {
+      background-color: rgba(255, 255, 255, 0.62)
+    }
+
     #feeding-info-container {
       /*background-color: #ffb5fa;*/
       background-image: url("https://images.unsplash.com/photo-1511873289150-1e09e771e570?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
       background-size: cover;
       padding: 30px;
       width: 100%;
+    }
+
+    #feeding-info-background {
+      background-color: rgba(255, 255, 255, 0.62);
     }
 
   </style>
@@ -68,30 +80,36 @@
 
 <div class="container">
   <div id="basic-info-container">
-    <h3>Basic Information</h3>
-    <p>Name: <%=@pet.name%></p>
-    <p>Species: <%=@pet.species%></p>
-    <p>Breed: <%=@pet.breed%></p>
-    <p>Microchip Number: <%=@pet.microchip_number%></p>
-    <p>Microchip Registry: <%=@pet.microchip_registry%></p>
+    <div id="basic-info-background">
+      <h3>Basic Information</h3>
+      <p>Name: <%=@pet.name%></p>
+      <p>Species: <%=@pet.species%></p>
+      <p>Breed: <%=@pet.breed%></p>
+      <p>Microchip Number: <%=@pet.microchip_number%></p>
+      <p>Microchip Registry: <%=@pet.microchip_registry%></p>
+    </div>
   </div>
   <br/>
   <div id="health-info-container">
-    <h3>Health Information</h3>
-    <p>Vet Name: <%=@pet.vet_name%></p>
-    <p>Vet Phone: <%=@pet.vet_phone%></p>
-    <p>Vaccinations: <%=@pet.vaccinations%></p>
-    <p>Flea treatment type: <%=@pet.flea_treatment_type%></p>
-    <p>Heartworm treatment type: <%=@pet.heartworm_treatment_type%></p>
-    <p>Allergies: <%=@pet.allergies%></p>
+    <div id="health-info-background">
+      <h3>Health Information</h3>
+      <p>Vet Name: <%=@pet.vet_name%></p>
+      <p>Vet Phone: <%=@pet.vet_phone%></p>
+      <p>Vaccinations: <%=@pet.vaccinations%></p>
+      <p>Flea treatment type: <%=@pet.flea_treatment_type%></p>
+      <p>Heartworm treatment type: <%=@pet.heartworm_treatment_type%></p>
+      <p>Allergies: <%=@pet.allergies%></p>
+    </div>
   </div>
   <br/>
   <div id="feeding-info-container">
-    <h3>Feeding Information</h3>
-    <p>Food brand: <%=@pet.food_brand%></p>
-    <p>Food serving: <%=@pet.food_serving%></p>
-    <p>Feedings per day: <%=@pet.feedings_per_day%></p>
-    <p>Comments: <%=@pet.comments%></p>
+    <div id="feeding-info-background">
+      <h3>Feeding Information</h3>
+      <p>Food brand: <%=@pet.food_brand%></p>
+      <p>Food serving: <%=@pet.food_serving%></p>
+      <p>Feedings per day: <%=@pet.feedings_per_day%></p>
+      <p>Comments: <%=@pet.comments%></p>
+    </div>
   </div>
   <br/>
   <p><a class="button" href="/pets/<%=@pet.id%>/edit">Edit <%=@pet.name%>'s info</a></p>
