--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,4 +1,19 @@
-<h1>This page will let you update your pet's profile</h1>
+<head>
+    <style>
+    .title {
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+    }
+
+    
+
+    </style>
+</head>
+
+<div class="title">
+    <h1>This page will let you update your pet's profile</h1>
+</div>
 
 <form action="/pets/<%=@pet.id%>" method="post">
 <input type="hidden" name="_method" value="patch">
