--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,14 +1,22 @@
 <head>
-    <style>
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+  <style>
     .title {
       margin-left: auto;
       margin-right: auto;
       text-align: center;
     }
-
+    
+    body {
+      background-color: #eaebef;
+      font-family: 'Poppins', sans-serif;
+      /*background-image: url("https://images.unsplash.com/photo-1562119463-f5ac38fc8c47?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80");
+      background-repeat: no-repeat;
+      background-size: cover;*/
+    }
     
 
-    </style>
+  </style>
 </head>
 
 <div class="title">
