Add .container css

--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -15,7 +15,14 @@
             background-size: cover;*/
         }
     
+        .container {
+            max-width: 580px;
+            max-height: 920px;
+            margin-left: auto;
+            margin-right: auto;
+        }
 
+        
     </style>
 </head>
 
