--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -26,6 +26,17 @@
             width: 95%;
             opacity: .6;
         }
+
+        .button {
+            background-color: #f5ccff;
+            border: none;
+            color: black;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+        }
     </style>
 </head>
 
@@ -92,7 +103,7 @@
             <p><input type="submit" value="submit"></p>
         </div>
     </form>
-    <p><a href="/">Back to the main page</a></p>
-    <p><a href="/pets">See all of your pets!</a></p>
+    <p><a class="button" href="/">Back to the main page</a></p>
+    <p><a class="button" href="/pets">See all of your pets!</a></p>
 </div>
 
