--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -100,7 +100,7 @@
             <p><label for="comments">Comments:</label>
             <input class="field" type="text" id="comments" value="<%=@pet.comments%>" name="comments"></p>
 
-            <p><input type="submit" value="submit"></p>
+            <p><input class="button" type="submit" value="submit"></p>
         </div>
     </form>
     <p><a class="button" href="/">Back to the main page</a></p>
