Add background photos to containers

--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -37,6 +37,28 @@
             display: inline-block;
             font-size: 16px;
         }
+
+        #basic-info-container {
+            /*background-color: #ddc4ff;*/
+            background-image: url("https://images.unsplash.com/photo-1562946418-c2e2ffdfe13e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1049&q=80");
+            background-size: cover;
+            padding: 20px;
+        }
+
+        #health-info-container {
+            /*background-color: #c4fffe;*/
+            background-image: url("https://images.unsplash.com/photo-1551730458-be400bef0161?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+            background-size: cover;
+            padding: 20px;
+        }
+
+        #feeding-info-container {
+            /*background-color: #ffb5fa;*/
+            background-image: url("https://images.unsplash.com/photo-1511873289150-1e09e771e570?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+            background-size: cover;
+            padding: 20px;
+        }
+
     </style>
 </head>
 
